// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show task skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-err 1`] = `Array []`;

exports[`show task skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-exit 1`] = `Array []`;

exports[`show task skip should not collapse skip message: 7IvF8C3RevPE0cdsG7QZonUN1JS26n0N-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
⚠ This task will never execute.
  ↓ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G✔ This task will execute.
⚠ This task will never execute.
  ↓ This task will never execute. 
",
  ],
]
`;

exports[`show task skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-err 1`] = `Array []`;

exports[`show task skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-exit 1`] = `Array []`;

exports[`show task skip should skip from context: 8KLp76vGVlGdzoy4HztCYcYe2coxpO7e-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ This task will never execute. [SKIPPED]  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ This task will never execute. [SKIPPED] 
",
  ],
]
`;

exports[`show task skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-err 1`] = `Array []`;

exports[`show task skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-exit 1`] = `Array []`;

exports[`show task skip should skip from internal function: ws7S3nDQgIm3rqk7S8Z1z9NgWUWyqx6F-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G❯ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G↓ undefined [SKIPPED]  
",
  ],
  Array [
    "[2K[1A[2K[G↓ I am skipping this tasks for reasons. [SKIPPED]  
",
  ],
  Array [
    "[2K[1A[2K[G↓ I am skipping this tasks for reasons. [SKIPPED] 
",
  ],
]
`;

exports[`show task skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-err 1`] = `Array []`;

exports[`show task skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-exit 1`] = `Array []`;

exports[`show task skip skip from function: BmDpgfyyKMN40Ei5uinrsuOz1b2lEqtK-out 1`] = `
Array [
  Array [
    "◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
❯ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ I will be skipped! [SKIPPED]  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✔ This task will execute.
↓ I will be skipped! [SKIPPED] 
",
  ],
]
`;
